added buildings and resources

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="script/game/board.js"></script>
     <script src="script/game/building.js"></script>
     <script src="script/game/map.js"></script>
+    <script src="script/game/resources.js"></script>
     <script src="script/main.js"></script>
   </head>
   <body>
