--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,15 @@
       <div class="sidebar">
         <div id="log"></div>
         <div class="controls">
-          Board commands:
+          <h3>Board commands:</h3>
           <ul>
             <li><div class="board-command" data-callback="render_toggle">Toggle debug render</div></li>
           </ul>
+        </div>
+        <div class="info">
+          <h3>Info</h3>
+          <div id="info-selection" class="info-selection"></div>
+          <div id="info-building" class="info-building"></div>
         </div>
       </div>
     </div>
