--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="script/game/map.js"></script>
     <script src="script/game/production.js"></script>
     <script src="script/game/resources.js"></script>
+    <script src="script/game/roads.js"></script>
     <script src="script/main.js"></script>
   </head>
   <body>
