--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
         </div>
       </div>
     </div>
+    <div id="waiting" class="waiting">Loading...</div>
     <div id="error" class="error"></div>
 
 
