--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,10 @@
         </div>
       </div>
     </div>
-    <div id="waiting" class="waiting">Loading...</div>
+    <div id="waiting" class="waiting">
+      <h2>Loading...</h2>
+      <div id="loading" class="loading"></div>
+    </div>
     <div id="error" class="error"></div>
 
 
