added loading progress

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,12 @@
     </div>
     <div id="waiting" class="waiting">
       <h2>Loading...</h2>
-      <div id="loading" class="loading"></div>
+      <div id="loading" class="loading">
+        <div class="progress">
+          <span class="progress__span"></span>
+        </div>
+        <div class="loading__percentage"></div>
+      </div>
     </div>
     <div id="error" class="error"></div>
 
