--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Townfactory</title>
     <link rel="stylesheet" type="text/css" href="style/main.css" />
     
@@ -23,8 +24,8 @@
     <script src="script/main.js"></script>
   </head>
   <body>
-    <div class="board flex">
-      <div class="map-container">
+    <div class="board">
+      <div  id="map-container" class="map-container">
         <div id="map-canvas" class="map-canvas"></div>
       </div>
       <div class="sidebar">
