--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,17 @@
         <div id="map-canvas" class="map-canvas"></div>
       </div>
       <div class="sidebar">
-        <div id="log"></div>
+        <div class="sidebar__section">
+          <h3>Resources</h3>
+          <div id="resources" class="resources"></div>
+        </div>
         <div class="sidebar__section">
           <h3>Tools</h3>
           <div id="tools" class="tools"></div>
+        </div>
+        <div class="sidebar__section info">
+          <h3>Messages</h3>
+          <div id="messages" class="messages"></div>
         </div>
         <div class="sidebar__section info">
           <h3>Info</h3>
