--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       src="https://code.jquery.com/jquery-3.2.1.js"
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous"></script>
+    <script src="script/jquery.i18n.min.js"></script>
     <script src="lib/phaser.min.js"></script>
     
     <script src="script/database.js"></script>
