--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,9 @@
           <h3>Tools</h3>
           <div id="tools" class="tools"></div>
         </div>
-        <!--div class="sidebar__section info">
-          <h3>Messages</h3>
-          <div id="messages" class="messages"></div>
-        </div-->
+        <div class="sidebar__section info">
+          <div id="icons" class="icons"></div>
+        </div>
         <div class="sidebar__section info">
           <div id="info-building" class="info-building"></div>
         </div>
