--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"></script>
     <script src="script/jquery.i18n.min.js"></script>
     <script src="lib/phaser.min.js"></script>
+    <script src="lib/easystar-0.4.1.min.js"></script>
     
     <script src="script/database.js"></script>
     <script src="script/game.js"></script>
