--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
           <div id="icons" class="icons"></div>
         </div>
         <div class="sidebar__section info">
-          <div id="info-building" class="info-building"></div>
+          <div id="info-selection" class="info-selection"></div>
         </div>
         <div class="sidebar__section controls">
           <h3>Debug:</h3>
-          <div id="info-selection" class="info-selection"></div>
+          <div id="info-mouse" class="info-mouse"></div>
           <div id="debug"></div>
           <ul>
             <li><div class="board-command" data-callback="render_toggle">Toggle debug render</div></li>
