--- a/public/index.html
+++ b/public/index.html
@@ -31,17 +31,17 @@
 
     <div class="board">
       <div  id="map-container" class="map-container">
-        <div id="map-canvas" class="map-canvas"></div>
-      </div>
-      <div class="sidebar">
-        <div class="sidebar__section">
+        <div class="menu">
+          <div id="tools" class="tools"></div>
           <div id="resources" class="resources"></div>
         </div>
-        <div class="sidebar__section">
-          <h3>Tools</h3>
-          <div id="tools" class="tools"></div>
+        <div id="map-canvas-container" class="map-canvas-container">
+          <div id="map-canvas" class="map-canvas"></div>
         </div>
+      </div>
+      <div class="sidebar">
         <div class="sidebar__section info">
+          <h3>Notifications</h3>
           <div id="icons" class="icons"></div>
         </div>
         <div class="sidebar__section info">
